# dilemma

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  NOTICE  README.md  bench_rare.py  build_data.py  build_lookup_db.py  convert_treebank.py  export_tagger_onnx.py  extract_byzantine.py  extract_perseus.py  fix_selfmaps.py  pyproject.toml  rank_forms.py  rebuild_and_test.sh  rebuild_el_and_test.sh  train_lm.py  train_tagger.py
.github/workflows/: release.yml  test.yml
data/: ag_pos_lookup.json  glaux_pos_lookup.json  gorman_work_ids.json  lemma_equivalences.json  lsj10_headwords.json  lsj10_headwords.meta.json  med_pos_lookup.json  mg_pos_lookup.json  treebank_pos_lookup.json  vlg_headwords.json  wip_headwords.json
data/benchmarks/: bench_all.py  full_matrix.json
dilemma/: __init__.py  _attest_db.py  _download.py  _ort_providers.py  core.py  form_sanitize.py  morph_reconcile.py  nonlexical.py  onnx_inference.py  paradigm.py
dilemma/tagger/: __init__.py  _revisions.py  grc_onnx.py  onnx_backend.py  tokenize.py
eval/: eval_digrec.py  eval_gorman_gold.py  eval_holdout.py  eval_iliad_elision.py  eval_ptnk.py
scripts/: make_social.py
tests/: conftest.py  test_athematic_verbs.py  test_attestation.py  test_cog_ingestion.py  test_comprehensive.py  test_download.py  test_form_attestation.py  test_integrity.py  test_lsj_principal_parts.py  test_morph_reconcile.py  test_new_features.py  test_nonlexical.py  test_ort_providers.py  test_paradigm.py  test_synth_verb_participles.py
tests/fixtures/form_attest/: metadata.txt
tests/fixtures/form_attest/byzantine_vernacular/: manifest.json  testbyz.txt
tests/fixtures/form_attest/diorisis/: LateAuthor (9993) - TestLate (001).xml  TestPoet (9991) - TestEpos (001).xml
tests/fixtures/form_attest/first1k/data/tlg9994/tlg001/: tlg9994.tlg001.1st1K-grc1.xml
tests/fixtures/form_attest/glaux/: 9991-001.xml  9992-001.xml
tests/fixtures/form_attest/pg/PG151/: PG151_text.txt
tests/fixtures/form_attest/pta/data/pta9995/pta001/: pta9995.pta001.pta-grc1.xml
tests/tagger/: test_tagger.py
