[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# Import package stays `dilemma`; the PyPI distribution name is dilemma-nlp
# because plain "dilemma" is taken by an unrelated project.
name = "dilemma-nlp"
version = "0.12.0"
description = "Diachronic Greek lemmatizer (Ancient, Byzantine, and Modern Greek)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Francisco Riordan" }]
keywords = ["greek", "ancient-greek", "lemmatization", "nlp", "morphology", "byzantine", "modern-greek"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Greek",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "huggingface_hub>=0.20",
]

[project.optional-dependencies]
onnx = ["onnxruntime>=1.15", "numpy>=1.24"]
torch = ["torch>=2.0", "numpy>=1.24"]
lm = ["betacode", "pygtrie", "lxml"]  # betacode.conv needs pygtrie but under-declares it; lxml for TEI loci
dev = ["pytest>=7"]
# Tagger: POS tagger + dependency parser. Pulls torch and transformers,
# so it is opt-in - users who only want the lemmatizer can skip it.
tagger = ["torch>=2.5", "transformers", "huggingface_hub>=0.20"]
# Lightweight Ancient-Greek tagger: the GreBerta morphology backend runs on
# onnxruntime + tokenizers only (no torch/transformers). Enough for
# `Tagger(lang="grc")` accent-preserving UPOS + feature tagging.
tagger-onnx = ["onnxruntime>=1.15", "tokenizers>=0.15", "numpy>=1.24",
               "huggingface_hub>=0.20"]

[project.urls]
Homepage = "https://github.com/ciscoriordan/dilemma"
Repository = "https://github.com/ciscoriordan/dilemma"

[project.scripts]
dilemma = "dilemma.__main__:main"

[tool.setuptools]
packages = ["dilemma", "dilemma.tagger"]

[tool.setuptools.package-data]
dilemma = []

[tool.pytest.ini_options]
markers = [
    "slow: tests requiring model weights (skip by default, run with --run-slow)",
]

# Single-command release: `bumpver update --patch|--minor|--major` rewrites
# every version string below, commits, tags v{version}, and pushes both the
# commit and the tag -- which then fires .github/workflows/release.yml.
# Excludes dilemma/tagger/__init__.py which carries its own independent
# version for the sub-package.
[tool.bumpver]
current_version = "0.12.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version: {old_version} -> {new_version}"
tag_message = "v{new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"VERSION" = ["{version}"]
"pyproject.toml" = [
    'current_version = "{version}"',
    '^version = "{version}"',
]
